--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "php": ">= 5.3.0",
         "filp/whoops": "*",
         "symfony/var-dumper": "*",
-        "catfan/medoo": "^1.1"
+        "catfan/medoo": "^1.1",
+        "twig/twig": "^1.30"
     },
     "repositories": {
         "packagist": {
